@@ -18,7 +18,6 @@ on 'test' => sub {
   requires "IO::Handle" => "0";
   requires "IPC::Open3" => "0";
   requires "Test::More" => "0";
-  requires "lib" => "0";
 };
 
 on 'configure' => sub {
